# samplax-gauntlet

./: .gitignore  README.md  pyproject.toml
checkpoints/: sgd_init_epoch3.npz
gauntlet/: __init__.py  bnn_ladder.py  doctor_bridge.py  ladder.py  mnist.py  mnist_data.py  problems.py  run.py  samplers.py  table.py
ladders/bnn/: rung_0.1.npz  rung_0.3.npz  rung_1.npz  rung_10.npz  rung_3.npz
ladders/bnn800/: rung_0.1.npz  rung_0.3.npz  rung_1.npz  rung_10.npz  rung_3.npz
ladders/psgld800/: rung_0.1.npz  rung_0.3.npz  rung_1.npz  rung_10.npz  rung_100.npz  rung_3.npz  rung_30.npz
ladders/psgld800b/: rung_1000.npz  rung_10000.npz  rung_300.npz  rung_3000.npz
results/doublewell_amagold/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/doublewell_sghmc/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/gaussian2d/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/gaussian2d/chains/: amagold.npz  csghmc.npz  csgld.npz  psgld.npz  sghmc.npz  sgld.npz  (+1 more)
results/lp_gaussian/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/mnist_amagold/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/mnist_sghmc/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
results/mog25/: amagold.json  csghmc.json  csgld.json  psgld.json  sghmc.json  sgld.json  vc_lp_sgld.json
tests/: test_smoke.py
(+7 files in other folders)
