[project]
name = "samplax-gauntlet"
version = "0.1.0"
description = "Every samplax sampler on every paper's demo problem: the cross-matrix benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "samplax @ git+https://github.com/BoltMaxwell/samplax",
    "jax>=0.4.30",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gauntlet*"]
